@@ -99,5 +99,19 @@
 <input type="hidden" name="id" value="42">
     </form>
 
+<form id="snd3" method="POST" name="snd3" action="50-form2.html">
+<input type="hidden" name="id" value="42">
+<textarea name="comment"></textarea>
+    </form>
+
+<form id="snd4" method="POST" name="snd4" action="50-form2.html">
+<input type="hidden" name="id" value="42">
+<select name="quickcomment">
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+</select>
+    </form>
+
 </body>
 </html>
