@@ -13,7 +13,7 @@ if (! $mech) {
     plan skip_all => "Couldn't connect to MozRepl: $@";
     exit
 } else {
-    plan tests => 12;
+    plan tests => 14;
 };
 
 isa_ok $mech, 'WWW::Mechanize::Firefox';
@@ -38,11 +38,13 @@ $mech->get_local('50-form2.html');
 $f = $mech->forms;
 is ref $f, 'ARRAY', "We got an arrayref of forms";
 
-is 0+@$f, 3, "We found three forms";
+is 0+@$f, 5, "We found five forms";
 
 is $f->[0]->{id}, 'snd0', "We found the first form";
 is $f->[1]->{id}, 'snd', "We found the second form";
 is $f->[2]->{id}, 'snd2', "We found the third form";
+is $f->[3]->{id}, 'snd3', "We found the fourth form";
+is $f->[4]->{id}, 'snd4', "We found the fifth form";
 
 $mech->get_local('51-empty-page.html');
 @f = $mech->forms;
